syntax = "proto3";

//option java_outer_classname = "FileName";
option java_multiple_files = true;
option java_package = "com.kuaishou.data.udf.video.protobuf";

message FileName {
    uint64 task_id = 1;
    string sub_task = 2;
    uint64 timestamp = 3;
}